# scan4secrets

./: .gitignore  .pre-commit-hooks.yaml  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs-deploy.yml  release.yml
docs/: architecture.md  changelog.md  ci-integration.md  cli-reference.md  downloads.md  gap-analysis.md  getting-started.md  intro.md  rules-engine.md  sample-report.md  verification.md
docs/targets/: _category_.json  aws.md  facebook.md  github.md  google-cloud.md  slack.md
scan4secrets/: __init__.py  __main__.py  cli.py
scan4secrets/config/: rules.yaml
scan4secrets/config/wordlist/: CloudProvider-Service.txt  Docker-Compose-Kubernetes.txt  Keys-SSH-Certificate.txt  Node.js-Express-JS.txt  OtherConfig-CI-DevOps.txt  Python-Django-Flask.txt  React-Next.js-Vite-Frontend.txt  admin-panels.txt  api-paths.txt  backup-files.txt  common.txt  database-dumps.txt  env.txt  php-laravel-symfony-drupal.txt  wordpress.txt
scan4secrets/engine/: __init__.py  crawler.py  entropy.py  findings.py  rules.py  scanner.py  sourcemap.py  verifier.py  wordlists.py
scan4secrets/reporters/: __init__.py  csv_.py  excel.py  html.py  json_.py  jsonl.py  pdf.py  sarif.py
tests/: test_rules.py
tests/fixtures/: README.md
website/: .gitignore  README.md  docusaurus.config.ts  package.json  sidebars.ts
website/src/components/GitHubStats/: index.tsx  styles.module.css
website/src/components/HomepageFeatures/: index.tsx  styles.module.css
website/src/components/ReadingProgress/: index.tsx  styles.module.css
website/src/components/ScrollToTop/: index.tsx  styles.module.css
website/src/css/: custom.css
website/src/pages/: index.module.css  index.tsx
website/src/theme/: Root.tsx
website/src/theme/NavbarItem/: ComponentTypes.tsx
website/static/: CNAME  robots.txt
